<resources>
    <string name="app_name">TestbedCameraPreviewAPI1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="start_preview">Preview</string>
    <string name="preview_start">Preview</string>
    <string name="preview_stop">Preview Stop</string>
    <string name="capture_start_stop">Sampling</string>
    <string name="sampling_start">Sampling</string>
    <string name="sampling_stop">Stop Sampling</string>
</resources>
