<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fps_control_panel"

        >
        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="FPS"
            android:id="@+id/fps_caption"/>

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fps_bar"/>
    <TextureView
        android:id="@+id/camera_preview_texture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="0"
        >
        <ToggleButton android:id="@+id/preview_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_preview"
            android:textOff="@string/preview_start"
            android:textOn="@string/preview_stop"
            android:checked="false" />
        <ToggleButton android:id="@+id/sampling_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_start_stop"
            android:checked="false"
            android:textOff="@string/sampling_start"
            android:textOn="@string/sampling_stop" />
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
